--- a/output.css
+++ b/output.css
@@ -250,8 +250,8 @@
   .bg-yellow-300 {
     background-color: var(--color-yellow-300);
   }
-  .bg-\[url\(\'images\/image\.png\'\)\] {
-    background-image: url('images/image.png');
+  .bg-\[url\(\'images\/Image\.png\'\)\] {
+    background-image: url('images/Image.png');
   }
   .bg-cover {
     background-size: cover;
